testsuite/tests/dependent/should_fail/T18271.hs
{-# LANGUAGE DeriveAnyClass #-}
{-# LANGUAGE RankNTypes #-}
{-# LANGUAGE StandaloneDeriving #-}
module T18271 where

class C a
deriving instance forall a -> C (Maybe a)
